Commit muito incrível, incluindo novamente relatórios perdidos.
